# val2026

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: version.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  parties.rs  updater.rs
src-tauri/src/sources/: mod.rs  wikipedia.rs
src/components/: ArcSeats.vue  BlockSupport.vue  Card.vue  CoalitionBuilder.vue  KpiStrip.vue  PartyLogo.vue  PollList.vue  PollOfPolls.vue  RiksdagArc.vue  SeatDistribution.vue  ThemeToggle.vue  ThresholdRisk.vue  TrendChart.vue  UpdateBanner.vue  Vs2022.vue
src/lib/: arcLayout.ts  blocks.ts  chartTheme.ts  elections.ts  mandates.ts  parties.ts  partyLogos.ts  partyMeta.ts  pollOfPolls.ts  quiz.ts  quizMatch.ts  tauri.ts  theme.ts  themeMode.ts  threshold.ts  updateCheck.ts
src/styles/: tokens.css
src/views/: PartyProfiles.vue  QuizView.vue
